[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-apps-nemo"
version = "2.1.0"
description = "Library to systematically track and evaluate LLM based applications."
authors = [
  "Snowflake Inc. <ml-observability-wg-dl@snowflake.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
homepage = "https://trulens.org/"
documentation = "https://trulens.org/getting_started/"
repository = "https://github.com/truera/trulens"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
trulens-core = { version = "^2.0.0" }
trulens-apps-langchain = { version = "^2.0.0" }
pydantic = "^2.4.2"
nemoguardrails = ">=0.9"
onnxruntime = [
  { version = ">=1.14.0,<1.20.0", python = "<3.10" },
  { version = ">=1.14.0", python = ">=3.10" },
]

[tool.poetry.group.dev.dependencies]
trulens-core = { path = "../../core" }
trulens-apps-langchain = { path = "../langchain" }
