[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-connectors-snowflake"
version = "1.3.0"
description = "Library to systematically track and evaluate LLM based applications."
authors = [
  "Snowflake Inc. <ml-observability-wg-dl@snowflake.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
include = [
  { path = "trulens/data/snowflake_stage_zips/*.zip", format = [
    "sdist",
    "wheel",
  ] },
]
homepage = "https://trulens.org/"
documentation = "https://trulens.org/getting_started/"
repository = "https://github.com/truera/trulens"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
poetry-core = "<2.0.0"
trulens-core = { version = "^1.0.0" }
snowflake-snowpark-python = { version = "^1.18" }
snowflake-sqlalchemy = { version = "^1.6" }

[tool.poetry.group.dev.dependencies]
trulens-core = { path = "../../core", develop = true }
