[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-instrument-langchain"
version = "0.33.0"
description = "Library to systematically track and evaluate LLM based applications."
authors = [
  "Truera Inc <all@truera.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
trulens-core = "^0.33"
langchain = "^0.2"
typing-inspect = "^0.8"
pydantic = "^2"

[tool.poetry.group.dev.dependencies]
trulens-core = { path = "../../core" }
