[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-otel-semconv"
version = "2.1.0"
description = "Semantic conventions for spans produced by TruLens."
authors = [
  "Snowflake Inc. <ml-observability-wg-dl@snowflake.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
homepage = "https://trulens.org/"
documentation = "https://trulens.org/getting_started/"
repository = "https://github.com/truera/trulens"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
# This package only has pre-releases:
opentelemetry-semantic-conventions = { version = ">=0.36b0", allow-prereleases = true }
# This package requires python 3.9 so we are avoiding using it for now:
# opentelemetry-semantic-conventions-ai = { version = ">=0.4.2", allow-prereleases=true }
