[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "trulens-provider-openai"
version = "0.33.0"
description = "Library to systematically track and evaluate LLM based applications."
authors = ["Truera Inc <all@truera.com>"]
license = "MIT"
readme = "README.md"
packages = [
  {include = "trulens"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
trulens-core = "^0.33.0"
trulens-feedback = "^0.33.0"
openai = "^1.1.1"
langchain_openai = "^0.0.5"

[tool.poetry.group.dev.dependencies]
trulens-core = {path = "../../core"}
trulens-feedback = {path = "../../feedback"}
