[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-providers-cortex"
version = "1.0.1a2"
description = "A TruLens extension package adding Snowflake Cortex support for LLM App evaluation."
authors = [
  "Snowflake Inc. <ml-observability-wg-dl@snowflake.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
homepage = "https://trulens.org/"
documentation = "https://trulens.org/trulens/getting_started/"
repository = "https://github.com/truera/trulens"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
trulens-core = { version = "^1.0.0", allow-prereleases = true }
trulens-feedback = { version = "^1.0.0", allow-prereleases = true }
snowflake-connector-python = "^3.11"
snowflake-snowpark-python = "^1.18"

[tool.poetry.group.dev.dependencies]
trulens-core = { path = "../../core" }
trulens-feedback = { path = "../../feedback" }
