[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "trulens-providers-cortex"
version = "1.3.0"
description = "A TruLens extension package adding Snowflake Cortex support for LLM App evaluation."
authors = [
  "Snowflake Inc. <ml-observability-wg-dl@snowflake.com>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "trulens" },
]
homepage = "https://trulens.org/"
documentation = "https://trulens.org/getting_started/"
repository = "https://github.com/truera/trulens"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
poetry-core = "<2.0.0"
packaging = ">=23.0"
trulens-core = { version = "^1.0.0" }
trulens-feedback = { version = "^1.0.0" }
snowflake-connector-python = "^3.11"
snowflake-ml-python = "^1.6.4"
scipy = [
  { version = ">=1.7.0,<1.11.1", python = "<3.9" },
  { version = ">=1.11.1", python = ">=3.9" },
]
snowflake-snowpark-python = "^1.18.0"

[tool.poetry.group.dev.dependencies]
trulens-core = { path = "../../core" }
trulens-feedback = { path = "../../feedback" }
